--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%REACT_APP_BACKEND_URL%/public/logotipos/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="theme-color" content="#222222" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
